Task#4 Add telegram bot Added new column to chat_games table (message id) Changed game service behaviour to get game using message id added metadata creator added telegram game entity added telegram game mappers